more styling changes

--- a/app/assets/stylesheets/api/login.scss
+++ b/app/assets/stylesheets/api/login.scss
@@ -35,6 +35,19 @@
   margin-bottom: 10px;
 }
 
+#button-demo {
+  margin-top: 5px;
+}
+
+#check-account {
+  margin-top: 20px;
+}
+
+#link-session {
+  color: #fff;
+
+}
+
 .form-session button {
   width: 256px;
   height: 40px;
