--- a/app/assets/stylesheets/api/signup.scss
+++ b/app/assets/stylesheets/api/signup.scss
@@ -40,6 +40,14 @@
   margin-bottom: 10px;
 }
 
+#check-account {
+  margin-top: 20px;
+}
+
+#link-session {
+  color: #fff;
+}
+
 .form-session button {
   width: 260px;
   height: 40px;
