updated logout route

--- a/app/assets/stylesheets/api/signup.scss
+++ b/app/assets/stylesheets/api/signup.scss
@@ -26,8 +26,9 @@
 
 .form-session input {
   display: block;
-  width: 250px;
+  width: 235px;
   height: 40px;
+  padding: 0 10px;
   margin: 0 auto;
 }
 
