--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -18,3 +18,15 @@
   text-align: center;
   color: #fff;
 }
+
+#name-station {
+  margin-top: 20px;
+  display: block;
+  color: #fff;
+  font-size: 40px;
+  text-align: center;
+}
+
+#link-edit {
+  display: inline;
+}
