Fix Stations CRUD and add copious styling

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -76,8 +76,7 @@ div {
 }
 
 .list-error {
-  position: absolute;
+  text-align: center;
   margin-top: 20px;
-  margin-left: 550px;
   color: #b30000;
 }
