--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -2,6 +2,15 @@ div {
   font-family: Avenir Next,Avenir,Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
+#image-user {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  top: 10px;
+  right: 12px;
+  border-radius: 20px;
+}
+
 #logo {
   display: inline-block;
   font-size: 24px;
@@ -16,7 +25,7 @@ div {
 
 #logo-fixed {
   display: inline;
-  margin-right: 20px;
+  margin-right: 10px;
   font-size: 16px;
   color: #e6e6e6;
 }
@@ -63,7 +72,7 @@ div {
 
 #button-logout {
   display: inline-block;
-  width: 80px;
+  width: 70px;
   text-align: center;
   padding: 3px 10px 3px 10px;
   background-color: #fff;
@@ -72,7 +81,7 @@ div {
   text-decoration: none;
   font-size: 12px;
   font-weight: normal;
-  margin: 20px 20px 0px 0px;
+  margin: 20px 65px 0px 0px;
 }
 
 .list-error {
