--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
         window.currentUser = {
           "id": <%= current_user.id %>,
           "email": "<%= current_user.email %>",
+          "image_url": "<%= asset_url current_user.image.url %>"
         };
       </script>
     <% end%>
