--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -159,18 +159,14 @@
   padding-right: 398px;
 }
 
-#form-preview-parent {
-  display:none;
-  overflow: hidden;
-}
-
 #form-preview {
+  margin-top: 20px;
   width: 500px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
   border-color: #386aff;
-  background-image: url("http://www.cityrider.com/fixed/43aspect.png");
+  display: block;
 }
 
 #form-input {
