--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <% if current_user %>
       <script>
         window.currentUser = {
