Style Details Page for Stations

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -35,6 +35,15 @@ div {
   font-size: 16px;
   margin: 25px 0 0 50px;
   color: #e6e6e6;
+  text-decoration: none;
+}
+
+#now-playing {
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 25px;
+  margin-right: 980px;
+  color: #e6e6e6;
 }
 
 .nav-bar {
