--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -31,27 +31,44 @@
 
 .link-details {
   margin-left: 50px;
-  width: 50px;
+  height: 11px;
+  width: 40px;
   text-align: center;
-  padding: 7px 15px 5px 15px;
+  padding: 5px 10px 5px 10px;
   background-color: hsla(0,0%,100%,.2);
   color: #fff;
   border-radius: 2px;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: normal;
 }
 
+#play-station {
+  cursor: pointer;
+  height: 21px;
+  width: 50px;
+  padding-bottom: 3px;
+  background-color: lightgrey;
+  color: black;
+  border-radius:2px;
+  text-decoration: none;
+  font-size: 11px;
+  font-weight: 400;
+  text-align: center;
+}
+
 #button-dstation {
-  width: 70px;
-  padding: 5px 10px 5px 10px;
+  height: 21px;
+  width: 55px;
+  padding: 2px 10px 5px 10px;
   background-color: #fff;
   color: #224099;
   border-radius: 2px;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: normal;
   text-align: center;
+  cursor: pointer;
 }
 
 #name-station {
@@ -98,7 +115,7 @@
   position: absolute;
   margin-left: 125px;
   height: 26px;
-  width: 70px;
+  width: 60px;
   padding: 5px 10px 5px 10px;
   background-color: #fff;
   color: #224099;
@@ -169,35 +186,53 @@
   display: block;
 }
 
-#form-input {
+#form-input, #form-textarea {
   margin-left: 467px;
   width: 500px;
+  border: none;
+  border-radius: 2px;
+  padding: 10px;
+  letter-spacing: 1px;
+  -webkit-appearance: none;
+  border: 1px solid white;
+  box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);
+  background:none;
+  color: white;
+  font-size: 12px;
+  cursor:pointer;
+}
+
+#form-input-image {
+  margin-left: 467px;
 }
 
 #form-textarea {
-  margin-left: 467px;
-  width: 500px;
-  height: 60px;
+  height: 80px;
+  resize: none;
 }
 
 #form-cancel {
   margin-top: 30px;
   margin-left: 860px;
-  width: 50px;
+  height: 20px;
+  width: 60px;
   background-color: #fff;
   color: #224099;
   border-radius: 2px;
   text-decoration: none;
   font-size: 10px;
   font-weight: normal;
+  cursor:pointer;
 }
 
 #form-button {
-  width: 50px;
+  height: 20px;
+  width: 60px;
   background-color: hsla(0,0%,100%,.2);
   color: #fff;
   border-radius: 2px;
   text-decoration: none;
   font-size: 10px;
   font-weight: normal;
+  cursor:pointer;
 }
