--- a/app/assets/stylesheets/html.scss
+++ b/app/assets/stylesheets/html.scss
@@ -1,6 +1,6 @@
 html {
     transition: background-color .25s ease-out;
-    background-image: linear-gradient(180deg,#00a0ee,#386aff 0%);
+    background-image: linear-gradient(180deg,#00a0ee 0%, #386aff 30%);
     background-color: #386aff;
     background-repeat-y: no-repeat;
     color: rgba(0,0,0,.8);
