--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -1,12 +1,41 @@
 #audioplayer {
-  display: block;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   height: auto;
   width: 100%;
-  -webkit-appearance:none;
 }
 
-#audio-bar {
-  height: 100%;
+#preview-track-image {
+  position: absolute;
+  padding: 10px 0 0 12px;
+  height: 55px;
+  width: 55px;
+}
+
+#media-title {
+  position: absolute;
+  color: white;
+  font-size: 15px;
+  margin-top: 28px;
+  margin-left: 80px;
+}
+
+#slider {
+  display: inline-block;
+  width: 100%;
+}
+
+#slider-bar {
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: 0;
+}
+
+#timer {
+  margin-top: 20px;
+  color: white;
+  float: right;
+  font-size: 12px;
 }
