--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -7,6 +7,45 @@
   background-color: #224099;
 }
 
+input[type=range] {
+  -webkit-appearance: none;
+  background: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  cursor: pointer;
+  border: 1px solid black;
+  height: 15px;
+  width: 10px;
+  margin-top: -5px;
+  border-radius: 10px;
+  background: white;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-ms-track {
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 6px;
+  margin-top: 2px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #00bfff;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+
 #preview-track-image {
   position: absolute;
   padding: 10px 0 0 12px;
@@ -48,12 +87,12 @@
   margin-right: 340px;
 }
 
-#button-repeat {
+#button-repeat-off, #button-repeat-on, #button-next {
   font-size: 10px;
 }
 
-#button-next {
-  font-size: 10px;
+#button-repeat-off {
+  color: orange;
 }
 
 #mute-button {
