--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -106,7 +106,7 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 #media-buttons {
-  width:15%;
+  width:30%;
   text-align: center;
   display:flex;
   flex-direction: row;
@@ -116,7 +116,7 @@ input[type=range]::-webkit-slider-runnable-track {
   align-items: center;
   color: white;
   outline: none;
-  margin-left: 615px;
+  margin-left: 506px;
   cursor: pointer;
 }
 
@@ -126,6 +126,15 @@ input[type=range]::-webkit-slider-runnable-track {
 
 #button-repeat-off {
   color: orange;
+}
+
+#button-like-on, #button-dislike-on {
+  color: #224099;
+  background: white;
+  border-radius: 25px;
+  height: 25px;
+  width: 25px;
+  padding: 6px 3px 0 3px;
 }
 
 #mute-button {
