--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -132,9 +132,15 @@ input[type=range]::-webkit-slider-runnable-track {
   color: #224099;
   background: white;
   border-radius: 25px;
-  height: 25px;
-  width: 25px;
-  padding: 6px 3px 0 3px;
+  height: 24.5px;
+  width: 24.5px;
+  padding: 5.5px 3px 0 2.5px;
+}
+
+#button-dislike-on {
+  padding-top: 8px;
+  height: 22px;
+  width: 24px;
 }
 
 #mute-button {
