--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -39,10 +39,10 @@ div {
 }
 
 #now-playing {
-  display: inline-block;
+  top: 25px;
+  left: 180px;
+  position: absolute;
   font-size: 16px;
-  margin-top: 25px;
-  margin-right: 900px;
   color: #e6e6e6;
 }
 
