Added frontpage logo

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -2,6 +2,13 @@ div {
   font-family: Avenir Next,Avenir,Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
+#img-logo {
+  margin: 5px 0px 0px 10px;
+  display: inline-block;
+  height: 100px;
+  width: 150px;
+}
+
 #image-user {
   position: absolute;
   height: 40px;
