Update frontpage styling

--- a/app/assets/stylesheets/api/signup.scss
+++ b/app/assets/stylesheets/api/signup.scss
@@ -3,7 +3,7 @@
   display: flex;
   text-align: center;
   flex-direction: column;
-  margin-top: 160px;
+  margin-top: 5%;
 }
 
 .div-session h1 {
@@ -12,13 +12,13 @@
 }
 
 .div-session h2 {
-  margin-top: 75px;
+  margin-top: 3%;
   font-size: 24px;
   font-weight: 300;
 }
 
 .form-session {
-  margin-top: 5px;
+  margin-top: -5px;
   display: flex;
   flex-direction: column;
   text-align: center;
