Update loading logo

--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -126,7 +126,13 @@
   text-align: center;
 }
 
+#container-loading {
+
+}
+
 #img-loading {
+  margin-top: 1.5%;
+  width: 80%;
   display: block;
   margin-left: auto;
   margin-right: auto;
