--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -125,7 +125,7 @@ input[type=range]::-webkit-slider-runnable-track {
   color: white;
   outline: none;
   top: 1%;
-  margin-left: 506px;
+  margin-left: 33%;
   cursor: pointer;
 }
 
