--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -31,44 +31,56 @@
 
 .link-details {
   margin-left: 50px;
-  height: 11px;
-  width: 40px;
-  text-align: center;
-  padding: 5px 10px 5px 10px;
-  background-color: hsla(0,0%,100%,.2);
-  color: #fff;
+  height: 10px;
+  width: 35px;
+  border: none;
   border-radius: 2px;
-  text-decoration: none;
+  padding: 4px 6px 5px 6px;
+  -webkit-appearance: none;
+  border: 1px solid white;
+  box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);
+  background:none;
+  color: white;
   font-size: 11px;
-  font-weight: normal;
+  font-weight: 400;
+  cursor:pointer;
+  text-decoration: none;
 }
 
 #play-station {
-  cursor: pointer;
   height: 21px;
   width: 50px;
   padding-bottom: 3px;
-  background-color: lightgrey;
-  color: black;
+  box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);
+  border: 1px solid white;
+  background:none;
+  color: white;
   border-radius:2px;
-  text-decoration: none;
   font-size: 11px;
   font-weight: 400;
+  cursor: pointer;
   text-align: center;
+  text-decoration: none;
 }
 
 #button-dstation {
   height: 21px;
-  width: 55px;
-  padding: 2px 10px 5px 10px;
-  background-color: #fff;
-  color: #224099;
-  border-radius: 2px;
-  text-decoration: none;
+  width: 50px;
+  padding-bottom: 3px;
+  box-shadow: inset 0 0 10px 0 rgba(0,0,0,.1);
+  border: 1px solid white;
+  background:none;
+  color: white;
+  border-radius:2px;
   font-size: 11px;
-  font-weight: normal;
-  text-align: center;
+  font-weight: 400;
   cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+}
+
+#container-station {
+  margin-top: 2%;
 }
 
 #name-station {
