Update button styling

--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -125,10 +125,10 @@
 
 #delete-station {
   position: absolute;
-  margin-left: 125px;
+  margin-left: 10%;
   height: 26px;
   width: 60px;
-  padding: 5px 10px 5px 10px;
+  padding: 4px 10px 5px 10px;
   background-color: #fff;
   color: #224099;
   border-radius: 2px;
