--- a/app/assets/stylesheets/html.scss
+++ b/app/assets/stylesheets/html.scss
@@ -5,4 +5,5 @@ html {
     background-repeat-y: no-repeat;
     color: rgba(0,0,0,.8);
     -webkit-font-smoothing: antialiased;
+    height: 100%;
 }
