--- a/app/assets/stylesheets/api/station.scss
+++ b/app/assets/stylesheets/api/station.scss
@@ -14,6 +14,7 @@
   height: 180px;
   margin-top: 25px;
   margin-left: 50px;
+  box-shadow: 4px 4px 4px black;
 }
 
 .text-image {
@@ -92,7 +93,7 @@
 
 .link-edit {
   font: sans-serif;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: normal;
 }
 
@@ -105,7 +106,7 @@
 
 #img-station {
   float: left;
-  width: 270px;
+  width: 340px;
   height: 270px;
   padding: 20px;
 }
